Added a new AKConfiguration struct which is used for configuring AboutKit with the app details. AboutKit not also supports adding a TestFlight public link and hiding the Share App/Review App options.

--- a/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ar.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "مراجعة…";
 "View Privacy Policy…" = "عرض سياسة الخصوصية…";
 "View Terms of Use…" = "عرض شروط الاستخدام…";
+"Open TestFlight…" = "فتح TestFlight…";
 "View…" = "منظر…";
 
 
