--- a/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/cs.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Posouzení…";
 "View Privacy Policy…" = "Zobrazit zásady ochrany osobních údajů…";
 "View Terms of Use…" = "Zobrazit podmínky použití…";
+"Open TestFlight…" = "Otevřít TestFlight…";
 "View…" = "Pohled…";
 
 
