--- a/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/es.lproj/Localizable.strings
@@ -30,7 +30,8 @@
 "Share…" = "Compartir…";
 "Review…" = "Revisar…";
 "View Privacy Policy…" = "Ver Política de Privacidad…";
-"View Terms of Use…" = "Ver Términos de Uso...";
+"View Terms of Use…" = "Ver Términos de Uso…";
+"Open TestFlight…" = "Abra TestFlight…";
 "View…" = "Vista…";
 
 
