--- a/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/fr.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Examen…";
 "View Privacy Policy…" = "Voir la Politique de Confidentialité…";
 "View Terms of Use…" = "Voir les Conditions d'Utilisation…";
+"Open TestFlight…" = "Ouvrez TestFlight…";
 "View…" = "Voir…";
 
 
