--- a/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/he.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "סקירה…";
 "View Privacy Policy…" = "הצג את מדיניות הפרטיות…";
 "View Terms of Use…" = "צפה בתנאי השימוש…";
+"Open TestFlight…" = "פתח את TestFlight…";
 "View…" = "נוף…";
 
 
