--- a/Sources/AboutKit/Resources/Localization/it.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/it.lproj/Localizable.strings
@@ -24,13 +24,14 @@
 
 "Check out %@ on the App Store!" = "Dai un'occhiata a %@ sull'App Store!";
 
-"Contact Developer…" = "Contatta lo Sviluppatore...";
+"Contact Developer…" = "Contatta lo Sviluppatore…";
 "Open Website…" = "Apri Sito Web…";
 "View Profile…" = "Vedi Profilo…";
 "Share…" = "Condividere…";
 "Review…" = "Revisione…";
 "View Privacy Policy…" = "Visualizza l'Informativa Sulla Privacy…";
-"View Terms of Use…" = "Visualizza i Termini di Utilizzo...";
+"View Terms of Use…" = "Visualizza i Termini di Utilizzo…";
+"Open TestFlight…" = "Apri TestFlight…";
 "View…" = "Visualizzazione…";
 
 
