--- a/Sources/AboutKit/Resources/Localization/ja.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ja.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "レビュー…";
 "View Privacy Policy…" = "プライバシーポリシーを見る…";
 "View Terms of Use…" = "利用規約を見る…";
+"Open TestFlight…" = "TestFlight を開く…";
 "View…" = "意見…";
 
 
