--- a/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ko.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "검토…";
 "View Privacy Policy…" = "개인정보 보호정책 보기…";
 "View Terms of Use…" = "이용약관 보기…";
+"Open TestFlight…" = "TestFlight 열기…";
 "View…" = "보다…";
 
 
