--- a/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/nl.lproj/Localizable.strings
@@ -24,13 +24,14 @@
 
 "Check out %@ on the App Store!" = "Bekijk %@ in de App Store!";
 
-"Contact Developer…" = "Neem Contact op Met Ontwikkelaar...";
+"Contact Developer…" = "Neem Contact op Met Ontwikkelaar…";
 "Open Website…" = "Website Openen…";
 "View Profile…" = "Bekijk Profiel…";
 "Share…" = "Deel…";
 "Review…" = "Beoordeling…";
-"View Privacy Policy…" = "Privacybeleid Bekijken...";
-"View Terms of Use…" = "Gebruiksvoorwaarden Bekijken...";
+"View Privacy Policy…" = "Privacybeleid Bekijken…";
+"View Terms of Use…" = "Gebruiksvoorwaarden Bekijken…";
+"Open TestFlight…" = "TestFlight openen…";
 "View…" = "Weergave…";
 
 
