--- a/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pl.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Recenzja…";
 "View Privacy Policy…" = "Zobacz Politykę Prywatności…";
 "View Terms of Use…" = "Wyświetl Warunki Użytkowania…";
+"Open TestFlight…" = "Otwórz TestFlight…";
 "View…" = "Pogląd…";
 
 
