--- a/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ro.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Revizuire…";
 "View Privacy Policy…" = "Vedeți Politica de Confidențialitate…";
 "View Terms of Use…" = "Vedeți Termenii de Utilizare…";
+"Open TestFlight…" = "Deschide TestFlight…";
 "View…" = "Vedere…";
 
 
