--- a/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/ru.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Обзор…";
 "View Privacy Policy…" = "Посмотреть политику конфиденциальности…";
 "View Terms of Use…" = "Посмотреть Условия использования…";
+"Open TestFlight…" = "Открыть TestFlight…";
 "View…" = "Вид…";
 
 
