--- a/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/vi.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Ôn tập…";
 "View Privacy Policy…" = "Xem Chính sách bảo mật…";
 "View Terms of Use…" = "Xem Điều khoản sử dụng…";
+"Open TestFlight…" = "Mở TestFlight…";
 "View…" = "Xem…";
 
 
