--- a/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "审查…";
 "View Privacy Policy…" = "查看隐私政策…";
 "View Terms of Use…" = "查看使用条款…";
+"Open TestFlight…" = "打开TestFlight…";
 "View…" = "看法…";
 
 
