--- a/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/de.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Rezension…";
 "View Privacy Policy…" = "Datenschutzrichtlinie Anzeigen…";
 "View Terms of Use…" = "Nutzungsbedingungen Anzeigen…";
+"Open TestFlight…" = "TestFlight öffnen…";
 "View…" = "Sicht…";
 
 
