--- a/Sources/AboutKit/Resources/Localization/en-IN.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/en-IN.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Review…";
 "View Privacy Policy…" = "View Privacy Policy…";
 "View Terms of Use…" = "View Terms of Use…";
+"Open TestFlight…" = "Open TestFlight…";
 "View…" = "View…";
 
 
