--- a/Sources/AboutKit/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/Sources/AboutKit/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "Review…" = "Análise…";
 "View Privacy Policy…" = "Ver Política de Privacidade…";
 "View Terms of Use…" = "Veja os Termos de Uso…";
+"Open TestFlight…" = "Abra o TestFlight…";
 "View…" = "Visualizar…";
 
 
